// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectRange routing getWidgetSearchParameters should add the refinements according to the UI state provided (min and max) 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [
    "price",
  ],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {
    "price": Object {
      "<=": Array [
        40,
      ],
      ">=": Array [
        20,
      ],
    },
  },
  "tagRefinements": Array [],
}
`;

exports[`connectRange routing getWidgetSearchParameters should add the refinements according to the UI state provided (only max) 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [
    "price",
  ],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {
    "price": Object {
      "<=": Array [
        30,
      ],
    },
  },
  "tagRefinements": Array [],
}
`;

exports[`connectRange routing getWidgetSearchParameters should add the refinements according to the UI state provided (only min) 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [
    "price",
  ],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {
    "price": Object {
      ">=": Array [
        10,
      ],
    },
  },
  "tagRefinements": Array [],
}
`;

exports[`connectRange routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "range": Object {
    "price": "20:30",
  },
}
`;

exports[`connectRange routing getWidgetState should not override other values in the same namespace 1`] = `
Object {
  "range": Object {
    "price": "10:20",
    "price-2": "15:20",
  },
}
`;
